@@ -1,23 +1,0 @@
-language: perl
-
-sudo: false
-
-install:
-  - perlbrew list
-  - cpanm -n Dist::Zilla
-  - dzil authordeps --missing | cpanm -n
-  - dzil listdeps   --missing | cpanm -n
-  - cpanm -n lib::findbin
-
-perl:
-  - "5.14"
-  - "5.16"
-  - "5.18"
-  - "5.20"
-  - "5.22"
-  - "5.24"
-  - "5.26"
-
-script:
-  - dzil test -v
-  - ./bin/cpangitify File::Which
