@@ -6,11 +6,14 @@ copyright_year   = 2013
 version          = 0.17
 
 [@Author::Plicease]
-:version      = 2.21
+:version      = 2.62
 readme_from   = bin/cpangitify
 release_tests = 1
-travis_status = 1
 test2_v0      = 1
+github_user   = uperl
+
+workflow = linux
+workflow = macos
 
 preamble = | use Git::Wrapper;
 preamble = | use Sort::Versions qw( versioncmp );
